--- a/nbs/multitask_learning_synapse.ipynb
+++ b/nbs/multitask_learning_synapse.ipynb
@@ -1094,7 +1094,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
