Update code comments

--- a/nbs/eda.ipynb
+++ b/nbs/eda.ipynb
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tan et al. (Icentia11k) use a frame length of 2049.\n",
-    "# However, we choose to use a smaller frame length to accomodate our DeepBeat-inspired model\n",
+    "# However, we choose to use a smaller frame length to accomodate our DeepBeat-inspired model, which accepts a frame length of 800\n",
     "dataset = Icentia11k(Path(\"../data/icentia11k\"), frame_length=800)"
    ]
   },
