Minor change: just added a url to the deep beat dataset

--- a/nbs/DeepBeat.ipynb
+++ b/nbs/DeepBeat.ipynb
@@ -93,7 +93,10 @@
         "id": "TJoIQefVdW8m"
       },
       "source": [
-        "## Prepare the data"
+        "## Prepare the data\n",
+        "\n",
+        "Obtain the data from [https://www.synapse.org/Synapse:syn21985690](https://www.synapse.org/Synapse:syn21985690)\n",
+        "You will need to sign in with an account to access it."
       ]
     },
     {
@@ -1939,7 +1942,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
