Update rhythm to binary classes, and test saving npz file

--- a/nbs/eda.ipynb
+++ b/nbs/eda.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "       [1, 0, 0]], shape=(1310, 3))"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,23 +187,23 @@
      "output_type": "stream",
      "text": [
       "The beat type maps to a column {'(N': 0, '(AFIB': 1, '(AFL': 2}\n",
-      "Count of frames containing N, AFIB, and AFL rhythms: [19  0  0]\n",
+      "Count of frames containing N, AFIB, and AFL rhythms: [1310    0]\n",
       "The matrix below indicates the presence or absence of N, AFIB, and AFL beats in each frame (row):\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0],\n",
+       "array([[1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0],\n",
        "       ...,\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0]], shape=(1310, 3))"
+       "       [1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0]], shape=(1310, 2))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,23 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "None    5911\n",
-       "(N        19\n",
-       ")         18\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sanity check: the count of classes above should be less than or equal to the counts from the WFDB file\n",
     "# Rhythm annotations are stored in the aux_note property\n",
@@ -251,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +314,7 @@
        "       [0, 0, 0]], shape=(1310, 3))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +341,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -377,23 +363,23 @@
      "output_type": "stream",
      "text": [
       "The beat type maps to a column {'(N': 0, '(AFIB': 1, '(AFL': 2}\n",
-      "Count of frames containing N, AFIB, and AFL rhythms: [  0 110   0]\n",
+      "Count of frames containing N, AFIB, and AFL rhythms: [1200  110]\n",
       "The matrix below indicates the presence or absence of N, AFIB, and AFL beats in each frame (row):\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0],\n",
+       "array([[1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0],\n",
        "       ...,\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0]], shape=(1310, 3))"
+       "       [1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0]], shape=(1310, 2))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,28 +393,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "None     8326\n",
-       "(AFIB     110\n",
-       ")         110\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sanity check: the count of classes above should be less than or equal to the counts from the WFDB file\n",
     "# Rhythm annotations are stored in the aux_note property\n",
     "pd.Series(ann.aux_note).value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# datapoint = {\n",
+    "#     \"signal\": frames,\n",
+    "#     \"rhythm\": rhythm_classes,\n",
+    "#     \"qa_label\": ,\n",
+    "# }\n",
+    "\n",
+    "filepath = Path(\"../data/icentia11k_npz/p1100.npz\")\n",
+    "np.savez(filepath, signal=frames, rhythm=rhythm_classes, qa_label=np.zeros((len(frames), 3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_p1100 = np.load(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.07087161,  2.04397717,  2.01708274, ...,  1.06233024,\n",
+       "         1.14301355,  1.15646077],\n",
+       "       [ 1.04888302,  0.84717475,  0.5916776 , ...,  0.01344722,\n",
+       "         0.01344722,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        , ...,  0.2958388 ,\n",
+       "         0.21515549,  0.10757775],\n",
+       "       ...,\n",
+       "       [-0.10757775, -0.09413053, -0.06723609, ..., -0.01344722,\n",
+       "        -0.17481384, -0.25549715],\n",
+       "       [-0.25549715, -0.16136662, -0.05378887, ...,  0.01344722,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.01344722,  0.04034165,  0.05378887, ...,  0.02689444,\n",
+       "         0.02689444,  0.01344722]], shape=(1310, 800))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_p1100[\"signal\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NpzFile '../data/icentia11k_npz/p1100.npz' with keys: signal, rhythm, qa_label"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_p1100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
