Add beat classification to training data generation

--- a/nbs/eda.ipynb
+++ b/nbs/eda.ipynb
@@ -133,20 +133,20 @@
      "output_type": "stream",
      "text": [
       "The beat type maps to a column index {'N': 0, 'S': 1, 'V': 2}\n",
-      "Count of frames containing N, S, and V beats: [1291    5  247]\n",
+      "Count of frames containing N, S, and V beats: [1060  250]\n",
       "The matrix below indicates the presence or absence of N, S, and V beats in each frame (row):\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 1],\n",
-       "       [1, 0, 0],\n",
-       "       [1, 0, 1],\n",
+       "array([[0, 1],\n",
+       "       [1, 0],\n",
+       "       [0, 1],\n",
        "       ...,\n",
-       "       [1, 0, 0],\n",
-       "       [1, 0, 0],\n",
-       "       [1, 0, 0]], shape=(1310, 3))"
+       "       [1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0]], shape=(1310, 2))"
       ]
      },
      "execution_count": 5,
@@ -345,20 +345,20 @@
      "output_type": "stream",
      "text": [
       "The beat type maps to a column index {'N': 0, 'S': 1, 'V': 2}\n",
-      "Count of frames containing N, S, and V beats: [888   0   1]\n",
+      "Count of frames containing N, S, and V beats: [1309    1]\n",
       "The matrix below indicates the presence or absence of N, S, and V beats in each frame (row):\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0],\n",
+       "array([[1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0],\n",
        "       ...,\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0],\n",
-       "       [0, 0, 0]], shape=(1310, 3))"
+       "       [1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0]], shape=(1310, 2))"
       ]
      },
      "execution_count": 11,
@@ -474,18 +474,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Icentia11k.create_supervised_training_data() got an unexpected keyword argument 'patient_id'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdataset\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcreate_supervised_training_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpatient_id\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m900\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m1008\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msegments\u001b[49m\u001b[43m=\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m18\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m47\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: Icentia11k.create_supervised_training_data() got an unexpected keyword argument 'patient_id'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:p00900_s00.atr already fetched\n",
+      "INFO:root:p00900_s00.hea already fetched\n",
+      "INFO:root:p00900_s00.dat already fetched\n",
+      "INFO:root:p00900_s18.atr already fetched\n",
+      "INFO:root:p00900_s18.hea already fetched\n",
+      "INFO:root:p00900_s18.dat already fetched\n",
+      "INFO:root:p00900_s47.atr already fetched\n",
+      "INFO:root:p00900_s47.hea already fetched\n",
+      "INFO:root:p00900_s47.dat already fetched\n",
+      "INFO:root:p01100_s00.atr already fetched\n",
+      "INFO:root:p01100_s00.hea already fetched\n",
+      "INFO:root:p01100_s00.dat already fetched\n",
+      "INFO:root:p01100_s18.atr already fetched\n",
+      "INFO:root:p01100_s18.hea already fetched\n",
+      "INFO:root:p01100_s18.dat already fetched\n",
+      "INFO:root:p01100_s47.atr already fetched\n",
+      "INFO:root:p01100_s47.hea already fetched\n",
+      "INFO:root:p01100_s47.dat already fetched\n",
+      "INFO:root:p01008_s00.atr already fetched\n",
+      "INFO:root:p01008_s00.hea already fetched\n",
+      "INFO:root:p01008_s00.dat already fetched\n",
+      "INFO:root:p01008_s18.atr already fetched\n",
+      "INFO:root:p01008_s18.hea already fetched\n",
+      "INFO:root:p01008_s18.dat already fetched\n",
+      "INFO:root:p01008_s47.atr already fetched\n",
+      "INFO:root:p01008_s47.hea already fetched\n",
+      "INFO:root:p01008_s47.dat already fetched\n"
      ]
     }
    ],
@@ -495,21 +517,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = Path(\"../data/icentia11k/icentia11k_npz/p1100.npz\")\n",
+    "filepath = Path(\"../data/icentia11k/icentia11k_npz/train.npz\")\n",
     "data_p1100 = np.load(filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "signal (11790, 800, 1)\n",
+      "rhythm (11790, 2)\n",
+      "beat (11790, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "data_p1100[\"signal\"].shape"
+    "for k, v in data_p1100.items():\n",
+    "    print(k, v.shape)"
    ]
   },
   {
