Fix train.npz location

--- a/nbs/eda.ipynb
+++ b/nbs/eda.ipynb
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The beat type maps to a column index {'N': 0, 'S': 1, 'V': 2}\n",
+      "The beat type maps to a column index ['N', 'S', 'V']\n",
       "Count of frames containing N, S, and V beats: [1060  250]\n",
       "The matrix below indicates the presence or absence of N, S, and V beats in each frame (row):\n"
      ]
@@ -146,7 +146,7 @@
        "       ...,\n",
        "       [1, 0],\n",
        "       [1, 0],\n",
-       "       [1, 0]], shape=(1310, 2))"
+       "       [1, 0]], shape=(1310, 2), dtype=int8)"
       ]
      },
      "execution_count": 5,
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "print(\"The beat type maps to a column index\", dataset.beat_mapping)\n",
+    "print(\"The beat type maps to a column index\", dataset.ecg_encoder.beat_categories)\n",
     "print(\"Count of frames containing N, S, and V beats:\", np.sum(beat_classes, axis=0))\n",
     "print(\"The matrix below indicates the presence or absence of N, S, and V beats in each frame (row):\")\n",
     "beat_classes"
@@ -207,7 +207,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The beat type maps to a column {'(N': 0, '(AFIB': 1, '(AFL': 2}\n",
+      "The beat type maps to a column ['(N', '(AFIB', '(AFL']\n",
       "Count of frames containing N, AFIB, and AFL rhythms: [1310    0]\n",
       "The matrix below indicates the presence or absence of N, AFIB, and AFL beats in each frame (row):\n"
      ]
@@ -221,7 +221,7 @@
        "       ...,\n",
        "       [1, 0],\n",
        "       [1, 0],\n",
-       "       [1, 0]], shape=(1310, 2))"
+       "       [1, 0]], shape=(1310, 2), dtype=int8)"
       ]
      },
      "execution_count": 7,
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "print(\"The beat type maps to a column\", dataset.rhythm_mapping)\n",
+    "print(\"The beat type maps to a column\", dataset.ecg_encoder.rhythm_categories)\n",
     "print(\"Count of frames containing N, AFIB, and AFL rhythms:\", np.sum(rhythm_classes, axis=0))\n",
     "print(\"The matrix below indicates the presence or absence of N, AFIB, and AFL beats in each frame (row):\")\n",
     "rhythm_classes"
@@ -344,7 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The beat type maps to a column index {'N': 0, 'S': 1, 'V': 2}\n",
+      "The beat type maps to a column index ['N', 'S', 'V']\n",
       "Count of frames containing N, S, and V beats: [1309    1]\n",
       "The matrix below indicates the presence or absence of N, S, and V beats in each frame (row):\n"
      ]
@@ -358,7 +358,7 @@
        "       ...,\n",
        "       [1, 0],\n",
        "       [1, 0],\n",
-       "       [1, 0]], shape=(1310, 2))"
+       "       [1, 0]], shape=(1310, 2), dtype=int8)"
       ]
      },
      "execution_count": 11,
@@ -367,7 +367,7 @@
     }
    ],
    "source": [
-    "print(\"The beat type maps to a column index\", dataset.beat_mapping)\n",
+    "print(\"The beat type maps to a column index\", dataset.ecg_encoder.beat_categories)\n",
     "print(\"Count of frames containing N, S, and V beats:\", np.sum(beat_classes, axis=0))\n",
     "print(\"The matrix below indicates the presence or absence of N, S, and V beats in each frame (row):\")\n",
     "beat_classes"
@@ -418,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The beat type maps to a column {'(N': 0, '(AFIB': 1, '(AFL': 2}\n",
+      "The beat type maps to a column ['(N', '(AFIB', '(AFL']\n",
       "Count of frames containing N, AFIB, and AFL rhythms: [1200  110]\n",
       "The matrix below indicates the presence or absence of N, AFIB, and AFL beats in each frame (row):\n"
      ]
@@ -432,7 +432,7 @@
        "       ...,\n",
        "       [1, 0],\n",
        "       [1, 0],\n",
-       "       [1, 0]], shape=(1310, 2))"
+       "       [1, 0]], shape=(1310, 2), dtype=int8)"
       ]
      },
      "execution_count": 13,
@@ -441,7 +441,7 @@
     }
    ],
    "source": [
-    "print(\"The beat type maps to a column\", dataset.rhythm_mapping)\n",
+    "print(\"The beat type maps to a column\", dataset.ecg_encoder.rhythm_categories)\n",
     "print(\"Count of frames containing N, AFIB, and AFL rhythms:\", np.sum(rhythm_classes, axis=0))\n",
     "print(\"The matrix below indicates the presence or absence of N, AFIB, and AFL beats in each frame (row):\")\n",
     "rhythm_classes"
@@ -521,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = Path(\"../data/icentia11k/icentia11k_npz/train.npz\")\n",
+    "filepath = Path(\"../data/icentia11k/train.npz\")\n",
     "data_p1100 = np.load(filepath)"
    ]
   },
@@ -531,18 +531,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "signal (11790, 800, 1)\n",
-      "rhythm (11790, 2)\n",
-      "beat (11790, 2)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'num_frames': 11790,\n",
+       " 'beat_class_counts': array([11199,   591]),\n",
+       " 'rhythm_class_counts': array([11556,   234])}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for k, v in data_p1100.items():\n",
-    "    print(k, v.shape)"
+    "dataset.describe_ecg_npz(filepath)"
    ]
   },
   {
@@ -550,88 +552,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "training_data = dataset.load_all_npz(dataset.dir/\"icentia11k_npz\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_data[\"rhythm\"].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# datapoint = {\n",
-    "#     \"signal\": frames,\n",
-    "#     \"rhythm\": rhythm_classes,\n",
-    "#     \"qa_label\": ,\n",
-    "# }\n",
-    "\n",
-    "filepath = Path(\"../data/icentia11k_npz/p1100.npz\")\n",
-    "np.savez(filepath, signal=np.expand_dims(frames, axis=-1), rhythm=rhythm_classes, qa_label=np.zeros((len(frames), 3)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.expand_dims(frames, axis=-1)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_p1100 = np.load(filepath)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type(data_p1100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_p1100[\"signal\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_p1100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_p1100[\"signal\"].shape"
-   ]
+   "source": []
   }
  ],
  "metadata": {
