--- a/nbs/icentia_multitask.ipynb
+++ b/nbs/icentia_multitask.ipynb
@@ -2201,7 +2201,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
