--- a/nbs/01_icentia_preprocessing.ipynb
+++ b/nbs/01_icentia_preprocessing.ipynb
@@ -20,6 +20,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b7159305",
+   "metadata": {},
+   "source": [
+    "## Class Imbalance\n",
+    "\n",
+    "Oversampling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ad603eb3",
    "metadata": {},
    "source": [
