Add higher level dataset summary

--- a/nbs/01_icentia_preprocessing.ipynb
+++ b/nbs/01_icentia_preprocessing.ipynb
@@ -20,6 +20,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92224581",
+   "metadata": {},
+   "source": [
+    "## Normalization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac7bc804",
+   "metadata": {},
+   "source": [
+    "## Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b589599",
+   "metadata": {},
+   "source": [
+    "## Smoothing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b7159305",
    "metadata": {},
    "source": [
