Identify problems with data loader

--- a/nbs/00_icentia_dataset.ipynb
+++ b/nbs/00_icentia_dataset.ipynb
@@ -256,41 +256,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "f454f32c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 2)"
+       "(102, 2)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rng = np.random.default_rng(seed=2021)\n",
-    "\n",
-    "patient_ids = rng.integers(low=9_000, high=10_999+1, size=1) # <- Adjust number of different patients\n",
-    "segment_ids = rng.integers(low=0, high=49+1, size=1) # <- Adjust number of different segments\n",
-    "patient_segments = cartesian(patient_ids, segment_ids)\n",
-    "\n",
-    "# Patients with known abnormalities - you might not be lucky enough to randomly select patients from the dataset with abnormalities\n",
+    "# Patients with known abnormalities - we found these by searching through the icentia dataset\n",
     "patient_segments = np.array([\n",
-    "    *patient_segments,\n",
-    "    [900, 0], # Known beat abnormality\n",
-    "    [1100, 0], # Known rhythm abnormality\n",
-    "])\n",
+    "    [9001, 0],\n",
+    "    [9154, 3],\n",
+    "    [9154, 3],\n",
+    "    [9176, 3],\n",
+    "    [9176, 3],\n",
+    "    [9176, 3],\n",
+    "    [9184, 3],\n",
+    "    [9184, 3],\n",
+    "    [9184, 3],\n",
+    "    [9185, 3],\n",
+    "    [9185, 3],\n",
+    "    [9314, 3],\n",
+    "    [9314, 5],\n",
+    "    [9314, 5],\n",
+    "    [9376, 5],\n",
+    "    [9376, 5],\n",
+    "    [9376, 5],\n",
+    "    [9428, 15],\n",
+    "    [9428, 15],\n",
+    "    [9428, 15],\n",
+    "    [9440, 15],\n",
+    "    [9596, 19],\n",
+    "    [9596, 19],\n",
+    "    [9596, 19],\n",
+    "    [9634, 19],\n",
+    "    [9634, 19],\n",
+    "    [9634, 19],\n",
+    "    [9635, 19],\n",
+    "    [9635, 19],\n",
+    "    [9635, 19],\n",
+    "    [9764, 22],\n",
+    "    [9764, 22],\n",
+    "    [9764, 22],\n",
+    "    [9764, 22],\n",
+    "    [9764, 22],\n",
+    "    [9764, 22],\n",
+    "    [9764, 22],\n",
+    "    [9764, 22],\n",
+    "    [9772, 22],\n",
+    "    [9772, 22],\n",
+    "    [9772, 22],\n",
+    "    [9894, 22],\n",
+    "    [9894, 29],\n",
+    "    [9894, 29],\n",
+    "    [9894, 29],\n",
+    "    [9894, 30],\n",
+    "    [9909, 30],\n",
+    "    [9909, 30],\n",
+    "    [9909, 30],\n",
+    "    [9946, 31],\n",
+    "    [9946, 31],\n",
+    "    [9974, 31],\n",
+    "    [9974, 31],\n",
+    "    [9974, 31],\n",
+    "    [10278, 33],\n",
+    "    [10278, 33],\n",
+    "    [10278, 33],\n",
+    "    [10278, 33],\n",
+    "    [10278, 33],\n",
+    "    [10278, 33],\n",
+    "    [10351, 33],\n",
+    "    [10351, 33],\n",
+    "    [10413, 33],\n",
+    "    [10413, 33],\n",
+    "    [10413, 33],\n",
+    "    [10498, 33],\n",
+    "    [10498, 33],\n",
+    "    [10515, 37],\n",
+    "    [10532, 39],\n",
+    "    [10532, 39],\n",
+    "    [10532, 39],\n",
+    "    [10532, 39],\n",
+    "    [10532, 41],\n",
+    "    [10532, 41],\n",
+    "    [10674, 41],\n",
+    "    [10907, 45],\n",
+    "    [10907, 45],\n",
+    "    [10907, 45],\n",
+    "    [10907, 45],\n",
+    "    [10907, 45],\n",
+    "    [10907, 45],\n",
+    "    [10907, 45],\n",
+    "    [10907, 45],\n",
+    "    [10951, 45],\n",
+    "    [10951, 45],\n",
+    "    [10951, 45],\n",
+    "    [10951, 45],\n",
+    "    [10951, 45],\n",
+    "    [10951, 46],\n",
+    "    [10985, 46],\n",
+    "    [10985, 46],\n",
+    "    [10985, 48],\n",
+    "    [10985, 48],\n",
+    "    [10985, 48],\n",
+    "    [10988, 48],\n",
+    "    [10988, 48],\n",
+    "    [10988, 48],\n",
+    "    [10988, 48],\n",
+    "    [10988, 48],\n",
+    "    [10988, 48],\n",
+    "    [10988, 48],\n",
+    "    [10988, 48]])\n",
     "\n",
     "patient_segments.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "9b2d3e69",
    "metadata": {},
    "outputs": [
