--- a/nbs/01_icentia_preprocessing.ipynb
+++ b/nbs/01_icentia_preprocessing.ipynb
@@ -364,35 +364,48 @@
     "3. \n",
     "\n",
     "\n",
-    "More information at the [https://www.dspguide.com/](https://www.dspguide.com/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b8b406d",
-   "metadata": {},
-   "source": [
-    "### Filtering"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "955ae64b",
-   "metadata": {},
-   "source": [
-    "### Normalization"
+    "More information here:\n",
+    "\n",
+    "1. [Salimi et al. 2023](https://arxiv.org/pdf/2311.04229)\n",
+    "2. [https://www.dspguide.com/](https://www.dspguide.com/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1d4d8807",
+   "execution_count": 55,
+   "id": "0ab92af5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize_ecg_signal(frames: npt.NDArray) -> npt.NDArray:\n",
-    "    \"\"\"Normalize ecg signal data between [0, 1]\"\"\"\n",
-    "    raise NotImplementedError()"
+    "from sklearn.preprocessing import normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "1d4d8807",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "normalized_splits = {\n",
+    "    \"X_train\": normalize(splits[\"X_train\"], axis=1),\n",
+    "    \"rhythm_y_train\": splits[\"rhythm_y_train\"],\n",
+    "    \"beat_y_train\": splits[\"beat_y_train\"],\n",
+    "}\n",
+    "\n",
+    "plot_ecg(normalized_splits, frame_id=0);"
    ]
   },
   {
