Update signal preprocessing

--- a/nbs/03_denoising.ipynb
+++ b/nbs/03_denoising.ipynb
@@ -47,13 +47,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f74dcfaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bca5d8f7",
    "metadata": {},
    "source": [
     "## CDAE\n",
     "\n",
-    "Convolutional Denoising Autoencoder (CDAE) is models noisy ECG signals by learning to recover a clean ECG signal from a noisified version"
+    "Convolutional Denoising Autoencoder (CDAE) is models noisy ECG signals by learning to recover a clean ECG signal from a noisified version.\n",
+    "\n",
+    "The original paper (Soto & Ashley 2020) that we base our multi-task model architecture on demonstrated good classification performance when the transfered the learned representation of ECG from CDAE to their main model."
    ]
   },
   {
