Try to address class imbalance at the dataset level

--- a/nbs/02_preprocessing.ipynb
+++ b/nbs/02_preprocessing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9f63abcb",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
     "import numpy.typing as npt\n",
     "import pandas as pd\n",
     "\n",
-    "from ecg_classification.training import make_ecg_data_train_test_split, print_split_summary"
+    "from ecg_classification.training import make_ecg_data_train_test_split, print_split_summary, DataSplit"
    ]
   },
   {
@@ -191,8 +191,69 @@
     "Given the heavy class imbalance in the training set, it is appropriate to oversample.\n",
     "But remember NOT to oversample in the test set!\n",
     "\n",
-    "Oversampling - [SMOTE](https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/)\n",
+    "Oversampling - Due to the time-series data, we can't use [SMOTE](https://machinelearningmastery.com/smote-oversampling-for-imbalanced-classification/)\n",
+    "\n",
+    "I tried resampling, but that didn't work as well as I wanted - it just kept the relative proportions of classes the same ...\n",
+    "\n",
+    "\n",
+    "Trying to synthetically resample time series data is ... complicated\n",
+    "1. T-SMOTE [https://www.ijcai.org/proceedings/2022/0334.pdf](https://www.ijcai.org/proceedings/2022/0334.pdf)\n",
+    "2. tSMOTE [https://arxiv.org/abs/2201.05634](https://arxiv.org/abs/2201.05634)\n",
+    "\n",
+    "\n",
+    "For now, we will move the problem to the model and simply adjust the cost function such that more penalty weight is given to getting the minority class wrong \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b04968af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.utils import resample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "702a3415",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train split (10000, 800)\n",
+      "1115/10000 (0.1115) abnormal beats\n",
+      "11/10000 (0.0011) abnormal rhythms\n"
+     ]
+    }
+   ],
+   "source": [
+    "balanced_train = DataSplit(\"train\",\n",
+    "    *resample(train.X, train.y_rhythm, train.y_beat, n_samples=10_000, stratify=train.y_rhythm, random_state=42))\n",
+    "print_split_summary(balanced_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44863a95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def oversample_minority_class(split: DataSplit) -> DataSplit:\n",
+    "    \"\"\"Oversamples minority class to balance training set\n",
+    "    \n",
+    "    Note! Do not apply to test set, otherwise you risk overinflating performance. \n",
+    "    \"\"\"\n",
+    "    return DataSplit()\n",
+    "\n",
+    "\n",
+    "balanced_train = oversample_minority_class(train)\n",
+    "print_split_summary(balanced_train)"
    ]
   },
   {
